// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can render a subset of fields 1`] = `
<div
  className="information"
>
  <dl
    className="dl"
  >
    <div
      className="container"
    >
      <dt
        className="dt"
      >
        comment
      </dt>
      <dd
        className="dd"
      >
        comment
      </dd>
    </div>
    <div
      className="container"
    >
      <dt
        className="dt"
      >
        gloss
      </dt>
      <dd
        className="dd"
      >
        gloss
      </dd>
    </div>
  </dl>
</div>
`;

exports[`renders a word with additional fields 1`] = `
<div
  className="information"
>
  <dl
    className="dl"
  >
    <div
      className="container"
    >
      <dt
        className="dt"
      >
        sg
      </dt>
      <dd
        className="dd"
      >
        sg
      </dd>
    </div>
    <div
      className="container"
    >
      <dt
        className="dt"
      >
        comment
      </dt>
      <dd
        className="dd"
      >
        comment
      </dd>
    </div>
    <div
      className="container"
    >
      <dt
        className="dt"
      >
        artificial
      </dt>
      <dd
        className="dd"
      >
        artificial
      </dd>
    </div>
    <div
      className="container"
    >
      <dt
        className="dt"
      >
        gloss
      </dt>
      <dd
        className="dd"
      >
        gloss
      </dd>
    </div>
    <div
      className="container"
    >
      <dt
        className="dt"
      >
        alternateGloss
      </dt>
      <dd
        className="dd"
      >
        alternateGloss
      </dd>
    </div>
    <div
      className="container"
    >
      <dt
        className="dt"
      >
        semanticRole
      </dt>
      <dd
        className="dd"
      >
        semanticRole
      </dd>
    </div>
    <div
      className="container"
    >
      <dt
        className="dt"
      >
        include
      </dt>
      <dd
        className="dd"
      >
        include
      </dd>
    </div>
    <div
      className="container"
    >
      <dt
        className="dt"
      >
        multiword
      </dt>
      <dd
        className="dd"
      >
        multiword
      </dd>
    </div>
    <div
      className="container"
    >
      <dt
        className="dt"
      >
        notes
      </dt>
      <dd
        className="dd"
      >
        notes
      </dd>
    </div>
  </dl>
</div>
`;

exports[`renders an empty div when there are no fields 1`] = `<div />`;
